--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ python-dotenv==1.0.0
 playwright==1.40.0
 2captcha-python==1.2.3
 pandas==2.0.3
+numpy<2.0
 openpyxl==3.1.2
 google-generativeai>=0.3.0
